fix overspill

--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ header {
 	height: 150px;
 	text-align: center;
 	padding-top: 65px;
-	padding-bottom: 45px;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-bottom: 65px;
+	padding-left: 20px;
+	padding-right: 20px;
 	font-size: 25px;
 	background-color: lightgrey;
 }
@@ -91,8 +91,6 @@ header {
 	text-align: center;
 	padding-top: 45px;
 	padding-bottom: 45px;
-	padding-left: 10px;
-	padding-right: 10px;
 	font-size: 25px;
 }
 
